# stockflow-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260625_01_create_products_and_warehouses.py  20260625_02_add_stock_tables.py  20260625_03_add_orders_and_reservations.py  20260625_04_add_users.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  health.py  orders.py  products.py  router.py  stock.py  users.py  warehouses.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  order.py  order_item.py  product.py  reservation.py  stock_item.py  stock_movement.py  user.py  warehouse.py
app/schemas/: __init__.py  order.py  order_item.py  pagination.py  product.py  reservation.py  stock.py  user.py  warehouse.py
app/services/: __init__.py  order_service.py  product_service.py  stock_availability.py  stock_service.py  user_service.py  warehouse_service.py
scripts/: smoke_test.py
tests/: conftest.py  test_auth.py  test_health.py  test_orders.py  test_products.py  test_stock.py  test_warehouses.py
