[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stockflow-api"
version = "0.1.0"
description = "REST API for inventory, warehouse stock, and order management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pyjwt>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10,<26.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
target-version = ["py312"]
line-length = 88
